--- a/recipes/trinity/meta.yaml
+++ b/recipes/trinity/meta.yaml
@@ -1,13 +1,9 @@
 {% set name = "trinity" %}
-{% set version = "2.3.2" %}
+{% set version = "2.6.5" %}
 
 package:
   name: {{ name|lower }}
   version: {{ version }}
-
-build:
-  number: 0
-  skip: True  # [osx]
 
 source:
   fn: {{ name|lower }}_{{ version }}.tar.gz
@@ -15,12 +11,16 @@ source:
 
 requirements:
   build:
-    - gcc
+    - {{ compiler('c') }}
+    - {{ compiler('cxx') }}
+    - libgcc-ng
+  host:
+    - perl ==5.22.2.1
     - zlib ==1.2.8
   run:
-    - libgcc
-    - zlib ==1.2.8
     - openjdk ==1.8.0.102
+    - perl ==5.22.2.1
+    - zlib ==1.2.8
 
 test:
   commands:
@@ -34,6 +34,7 @@ test:
     - "define_clusters_by_cutting_tree.pl 2>&1 | grep \"define K clusters via k-means algorithm\" "
 
 about:
-  home: https://github.com/trinityrnaseq/trinityrnaseq/
-  license: 'BSD-3-Clause'
-  summary: 'Trinity RNA-Seq de novo transcriptome assembly'
+  home: https://github.com/trinityrnaseq/trinityrnaseq
+  summary: Trinity RNA-Seq de novo transcriptome assembly
+  license: BSD
+  license_file: LICENSE
